<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="#131313">

    <RelativeLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="@drawable/conor">
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_launcher_foreground"/>
        <TextView
            android:id="@+id/loginView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100sp"
            android:gravity="center"
            android:text="Chatalk"
            android:textSize="36sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginView"
            android:layout_margin="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:textColor="#000000"
                android:id="@+id/Email"
                android:background="@drawable/conor_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputEmail"
            android:layout_margin="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:textColor="#000000"
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/conor_text_input"
                android:hint="Password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgetpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputPassword"
            android:layout_marginRight="16dp"
            android:gravity="right"
            android:textStyle="italic"
            android:text="Forgor password" />

        <Button
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/backgroundbutton"
            android:textColor="@color/textbutton"
            android:id="@+id/loginbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/forgetpassword"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textStyle="bold"
            android:text="Sign in" />

        <TextView
            android:textStyle="italic"
            android:id="@+id/registerbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginbtn"
            android:gravity="center"
            android:text="Create new account" />
    </RelativeLayout>


</RelativeLayout>