...

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="18dp"
            app:layout_constraintBottom_toBottomOf="@+id/inputAddPost"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/inputAddPost" />

        <EditText
            android:id="@+id/inputAddPost"
            android:layout_width="0dp"
...
